feat: jwt, feign client, redis 의존성 추가